fixed carousel height, would like the carousel to be behind the modal when it is triggered

--- a/index.css
+++ b/index.css
@@ -123,7 +123,7 @@
 }
 
 .slides-container {
-  height: calc(100vh - 2rem);
+  height: calc(25vh);
   width: 100%;
   display: flex;
   overflow: scroll;
